updated for django-redis>3.0 fixed sight and vision wards being reversed in items.coffee added sight/vision ward count in game dropdown fixed popover alignment and text

--- a/lol/static/less/main.less
+++ b/lol/static/less/main.less
@@ -104,8 +104,11 @@
 .player_expand:hover {
 	cursor: pointer;
 }
-.popover-content p {
-	font-size: xx-small !important;
+.popover-content {
+	text-align:left;
+	&>p {
+		font-size: xx-small !important;
+	}
 }
 
 .sprite {
